--- a/Option_1_nbconvert_example.ipynb
+++ b/Option_1_nbconvert_example.ipynb
@@ -2,87 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "780c40ce-1e95-45dd-96c4-67dae62736f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RendererRegistry.enable('mimetype')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import altair as alt\n",
-    "alt.renderers.enable('mimetype')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "66d88de5-6378-476e-8ba1-4fd6a070641e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from splink.duckdb.duckdb_linker import DuckDBLinker\n",
-    "from splink.duckdb.duckdb_comparison_library import exact_match\n",
-    "import pandas as pd "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "fd737272-7fa7-4f75-82a5-300168b39b5e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = [\n",
-    "    {\"unique_id\": 1, \"forename\": \"John\", \"surname\": \"Smith\", \"full_name\": \"John Smith\"},\n",
-    "    {\"unique_id\": 2, \"forename\": \"Smith\", \"surname\": \"John\", \"full_name\": \"Smith John\"},\n",
-    "    {\"unique_id\": 3, \"forename\": \"Rob\", \"surname\": \"Jones\", \"full_name\": \"Rob Jones\"},\n",
-    "    {\"unique_id\": 4, \"forename\": \"Rob\", \"surname\": \"Jones\", \"full_name\": \"Rob Jones\"},\n",
-    "]\n",
-    "df = pd.DataFrame(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "715e5bfc-39a6-4478-a06f-539e8a09bb71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " settings = {\n",
-    "        \"link_type\": \"dedupe_only\",\n",
-    "        \"blocking_rules_to_generate_predictions\": [],\n",
-    "        \"comparisons\": [\n",
-    "            exact_match(\"forname\"),\n",
-    "            exact_match(\"surname\"),\n",
-    "        ],\n",
-    "        \"retain_matching_columns\": True,\n",
-    "        \"retain_intermediate_calculation_columns\": True,\n",
-    "    }\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "c8ac1030-6dd5-439c-a8ea-9d0a880565ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "linker = DuckDBLinker(df, settings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c0ae6c3f-00bc-4167-ac38-655d83cc51ab",
+   "execution_count": 26,
+   "id": "6603b7d3-8745-47c1-9dc1-c6386fc08db2",
    "metadata": {},
    "outputs": [
     {
@@ -468,22 +389,40 @@
        "https://altair-viz.github.io/user_guide/troubleshooting.html\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from splink.duckdb.duckdb_linker import DuckDBLinker\n",
+    "from splink.duckdb.duckdb_comparison_library import exact_match\n",
+    "import pandas as pd \n",
+    "\n",
+    "data = [\n",
+    "    {\"unique_id\": 1, \"forename\": \"John\", \"surname\": \"Smith\", \"full_name\": \"John Smith\"},\n",
+    "    {\"unique_id\": 2, \"forename\": \"Smith\", \"surname\": \"John\", \"full_name\": \"Smith John\"},\n",
+    "    {\"unique_id\": 3, \"forename\": \"Rob\", \"surname\": \"Jones\", \"full_name\": \"Rob Jones\"},\n",
+    "    {\"unique_id\": 4, \"forename\": \"Rob\", \"surname\": \"Jones\", \"full_name\": \"Rob Jones\"},\n",
+    "]\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "settings = {\n",
+    "        \"link_type\": \"dedupe_only\",\n",
+    "        \"blocking_rules_to_generate_predictions\": [],\n",
+    "        \"comparisons\": [\n",
+    "            exact_match(\"forname\"),\n",
+    "            exact_match(\"surname\"),\n",
+    "        ],\n",
+    "        \"retain_matching_columns\": True,\n",
+    "        \"retain_intermediate_calculation_columns\": True,\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "linker = DuckDBLinker(df, settings)\n",
+    "\n",
     "linker.match_weights_chart()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74b22469-86b6-43cb-8d4c-31c9ff35d2c7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
