add third example

--- a/Option_3_vl-convert.ipynb
+++ b/Option_3_vl-convert.ipynb
@@ -44,59 +44,38 @@
     "\n",
     "linker = DuckDBLinker(df, settings)\n",
     "\n",
-    "spec = linker.match_weights_chart().spec\n",
-    "\n",
-    "\n",
-    "with open(\"spec.json\", \"w\") as f:\n",
-    "    json.dump(spec, f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "280454b5-5c55-413b-900f-56b9657d3d19",
-   "metadata": {},
-   "source": [
-    "You now have a full specification of that chart as `spec.json` which you can use to render to a png using command line tools:\n",
-    "\n",
-    "1. Install node-canvas using instructions at  https://github.com/Automattic/node-canvas/\n",
-    "2. Install required npm packages: `npm install -g vega-lite vega-cli canvas`  (I had to run `npm uninstall -g vega-lite vega-cli canvas` first)\n",
-    "3. Run the following command: `vl2png spec.json --scale 2 vl2png_chart.png ` [Docs here](https://vega.github.io/vega/usage/#cli)\n",
-    "\n",
-    "Note I have used the scale command to increase the resolution\n",
-    "\n",
-    "The output is:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d8394a70-f973-4af0-9a8d-d2bd5ab417e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"vl2png_chart.png\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import Image\n",
-    "from IPython.core.display import HTML \n",
-    "Image(url= \"vl2png_chart.png\")"
+    "spec = linker.match_weights_chart().spec\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6a180d04-e307-43ed-b7f9-eb21cf311df6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import vl_convert as vlc\n",
+    "png_data = vlc.vegalite_to_png(vl_spec=spec, scale=2)\n",
+    "with open(\"vl_convert_chart.png\", \"wb\") as f:\n",
+    "    f.write(png_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4350fbe8-dfb5-4bfa-b85e-a0c5bf2a72b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image\n",
+    "from IPython.core.display import HTML \n",
+    "Image(url= \"vl_convert_chart.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdec5530-4b01-471f-a526-4242506bbb06",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -118,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
