--- a/Option_3_vl-convert.ipynb
+++ b/Option_3_vl-convert.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "44488efe-97ba-4fd4-9669-09e0cf3493e3",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6a180d04-e307-43ed-b7f9-eb21cf311df6",
    "metadata": {},
    "outputs": [],
@@ -62,10 +62,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4350fbe8-dfb5-4bfa-b85e-a0c5bf2a72b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"vl_convert_chart.png\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Image\n",
     "from IPython.core.display import HTML \n",
